--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -1,3 +1,7 @@
+.bg-blur {
+  backdrop-filter: blur(10px);
+}
+
 .bg-main-purple {
   background-color: #4e31aa;
   color: #fcfcfc;
@@ -49,6 +53,17 @@
 }
 
 .border-purple {
+  border: 1px solid #4e31aa;
+}
+
+.btn-transparent-purple {
+  color: #4e31aa;
+  border: 1px solid #4e31aa;
+}
+
+.btn-transparent-purple:hover {
+  background-color: #383746;
+  color: #fcfcfc;
   border: 1px solid #4e31aa;
 }
 
