--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -190,10 +190,9 @@
 }
 
 .table-row {
-  background-color: #645dbc;
+  background-color: #fcfcfc;
 }
 
 .table-row:hover {
   background-color: #dbdbdb;
-  transition: all 500ms ease-in-out;
 }
